--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethereum": "^2.2.0",
+    "@web3modal/react": "^2.2.0",
+    "ethers": "^5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "wagmi": "^0.12.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +42,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
+    "react-router-dom": "^6.9.0",
     "tailwindcss": "^3.1.8"
   }
 }
